--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -20,11 +20,17 @@
 			</li>
 			<li>@Html.ActionLink("Ведомость модуля", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
 			<li>@Html.ActionLink("Сертификаты", "Certificates", "Admin", new { Model.CourseId }, new { })</li>
-
-			@if (User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin))
+			
+			@{
+				var isCourseAdmin = User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin);
+			}
+			@if (isCourseAdmin || Model.CanAddInstructors)
 			{
 				<li class="divider" role="separator"></li>
 				<li>@Html.ActionLink("Пользователи", "Users", "Admin", new { Model.CourseId }, new { })</li>
+			}
+			@if (isCourseAdmin)
+			{
 				<li>@Html.ActionLink("Загрузить пакет", "Packages", "Admin", new { Model.CourseId }, new { })</li>
 				<li>@Html.ActionLink("Модули", "Units", "Admin", new { Model.CourseId }, new { })</li>
 				<li>@Html.ActionLink("Клиенты грейдера", "Clients", "Grader", new { Model.CourseId }, new { })</li>
