Simple markdown in comments Fix comments rules showing on comment editing Fix styles for comments rules
Don't show 'Sequence is empty' for courses with all-hidden units (or slides). Replace it 404
«Статистика и успеваемость» → «Ведомость модуля»

--- a/src/uLearn.Web/Views/Comments/_CommentText.cshtml
+++ b/src/uLearn.Web/Views/Comments/_CommentText.cshtml
@@ -1,8 +1,10 @@
-﻿@using uLearn.Web.Extensions
+﻿@using uLearn
+@using uLearn.Web.Extensions
 @model Database.Models.Comment
 
 @{
 	var htmlCommentText = Html.EncodeMultiLineText(Model.Text);
+	htmlCommentText = htmlCommentText.RenderSimpleMarkdown();
 	htmlCommentText = Html.HighlightLinks(htmlCommentText);
 }
-<div class="comment__text">@Html.Raw(htmlCommentText)</div>
+<div class="comment__text" data-original-text="@Model.Text">@Html.Raw(htmlCommentText)</div>
