--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -779,6 +779,18 @@ li.li-success {
 	color: #700;
 }
 
+.comments .comment__text pre.inline {
+	display: inline;
+	margin: 0;
+	border-width: 0;
+	padding: 0 5px;
+	overflow: visible;
+}
+
+.comments .comment__text pre:not(.inline) {
+	margin: 10px 0;
+}
+
 .comments .reply-form [name=commentText] {
 	height: 24px;
 	margin-left: 7px;
@@ -804,6 +816,10 @@ li.li-success {
 	display: inline-block;
 }
 
+.comments .reply-form .comments__rules + .reply-form__send-button {
+	margin-top: 0;
+}
+
 .comments .reply-form .comment__error-message {
 	display: inline-block;
 	margin-top: 7px;
@@ -825,6 +841,7 @@ li.li-success {
 	padding-top: 1px;
 	padding-left: 6px;
 	margin: 5px 0;
+	margin-bottom: 10px;
 }
 
 .comments .comment.is-pinned .comment__footer .comment__pin-link,
@@ -919,10 +936,13 @@ li.li-success {
 
 .comments .comments__rules {
 	display: block;
-	margin-left: 7px;
 	margin-right: -7px;
-	margin-bottom: 3px;
+	margin-bottom: 10px;
 	margin-top: 5px;
+}
+
+.comments .reply-form .comments__rules {
+	margin-left: 7px;
 }
 
 .comments .comments__rules ul {
