--- a/src/uLearn.Web/Views/Shared/UserAvatar.cshtml
+++ b/src/uLearn.Web/Views/Shared/UserAvatar.cshtml
@@ -37,3 +37,8 @@
 {
 	@Avatar(user, "xsmall " + classes)
 }
+
+@helper LargeAvatar(ApplicationUser user, string classes = "")
+{
+	@Avatar(user, "large " + classes)
+}
