Telegram's mode for notification markup
Simple markdown for exercise code review

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -779,6 +779,10 @@ li.li-success {
 	color: #700;
 }
 
+.comments .comment__text b {
+	font-weight: 600;
+}
+
 .comments .comment__text pre:not(.inline) {
 	margin: 10px 0;
 }
