Code review comments in notification — now with code fragments Comment's citation in notifications Change some notifications texts Styling pre's and code's in different environments Add information about comment formatting in comment__rules Some small fixes in other user's profile page

--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -93,6 +93,10 @@ input[type="checkbox"].input-validation-error {
 	top: 49px;
 }
 
+.dropdown-menu li {
+	cursor: pointer;
+}
+
 @media (max-width: 767px) {
 	h1 {
 		font-size: 25px;
