--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -96,17 +96,22 @@ else
 	}
 }
 
-@if (Model.Slide is ExerciseSlide)
-{
-	<div class="comments__rules alert alert-warning">
-		Простые правила хороших комментариев:
-		<ul>
-			<li>Используйте подсказки перед тем, как задать вопрос в комментариях.</li>
-			<li>Воздержитесь от вопросов «Почему у меня не работает?». Отлаживайте, экспериментируйте, думайте!</li>
-			<li>Пожалуйста, не публикуйте свои решения.</li>
-			<li>
-				Мы будем благодарны вам за доброжелательный тон в комментариях.
-			</li>
-		</ul>
+<div class="comments__rules alert alert-warning">
+	<div>
+		Работает форматирование: <b>**жирный текст**</b>, <i>__курсивный текст__</i>, <span class="inline-pre">`код`</span>, <span class="inline-pre">```многострочный код```</span>.
 	</div>
-}
+	@if (Model.Slide is ExerciseSlide)
+	{
+		<div class="comments__rules__good-tone">
+			Простые правила хороших комментариев:
+			<ul>
+				<li>Используйте подсказки перед тем, как задать вопрос в комментариях.</li>
+				<li>Воздержитесь от вопросов «Почему у меня не работает?». Отлаживайте, экспериментируйте, думайте!</li>
+				<li>Пожалуйста, не публикуйте свои решения.</li>
+				<li>
+					Мы будем благодарны вам за доброжелательный тон в комментариях.
+				</li>
+			</ul>
+		</div>
+	}
+</div>
