--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -658,6 +658,11 @@ li.li-info {
 	background: #d5eff6;
 }
 
+li.li-info > a:hover,
+li.li-info > a:focus {
+	background-color: #b9e4ef;
+}
+
 li.li-success {
 	background: #dbf0db;
 }
@@ -930,6 +935,10 @@ li.li-success {
 	display: none;
 }
 
+.comments__rules .comments__rules__good-tone {
+	margin-top: 10px;
+}
+
 .comments .comments__rules {
 	display: block;
 	margin-right: -7px;
@@ -944,6 +953,12 @@ li.li-success {
 .comments .comments__rules ul {
 	padding-left: 25px;	
 }
+
+.comments__rules pre,
+.comments__rules .inline-pre {
+	background-color: #fcfcf3;
+}
+
 
 /* User avatars */
 .user__avatar {
@@ -1769,6 +1784,33 @@ h1 .copy-group-link {
 
 .exercise__review .exercise__review__comment {
 	padding: 4px 0;
+}
+
+.exercise__review .exercise__review__comment pre {
+	background-color: #ffeeee;
+	border-color: #fdd;
+}
+
+.exercise__review .exercise__review__comment .inline-pre {
+	background-color: #ffeeee;
+}
+
+.exercise__review .exercise__review__comment pre::-webkit-scrollbar {
+	width: 7px;
+	height: 7px;
+}
+
+.exercise__review .exercise__review__comment pre::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(255,0,0,0.3);
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.exercise__review .exercise__review__comment pre::-webkit-scrollbar-thumb {
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	background: #f6dddd;
+	-webkit-box-shadow: inset 0 0 6px rgba(100,0,0,0.5);
 }
 
 .exercise__code__reviewed-fragment {
