Show markdown-rendered review comments in queue Show hint for instructors about formatting on code review page

--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -21,7 +21,11 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<textarea class="exercise__add-review__comment"></textarea>
-			<button class="exercise__add-review__button btn btn-success btn-sm mt10">Сохранить (Ctrl+Enter)</button>
+			<span class="with-long-tooltip cursor-pointer" data-toggle="tooltip" data-placement="bottom" title="**жирный текст**, __курсивный текст__, `код`, ```многострочный код```">
+				<span class="fa fa-question-circle"></span>
+				Работает форматирование
+			</span>
+			<button class="exercise__add-review__button btn btn-success btn-sm mt10">Сохранить (Ctrl+Enter)</button> 
 		</div>
 		<div class="col-sm-6 exercise__add-review__top-comments">
 			<b>Популярные комментарии</b>
