--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Database.Models
+@using RestSharp.Extensions
+@using uLearn
 @using uLearn.Extensions
 @using uLearn.Web.Extensions
 
@@ -84,7 +86,6 @@
 					<p>
 						@if (checkModel.ContextReviews.Any())
 						{
-							<b>Комментарии:</b>
 							foreach (var review in checkModel.ContextReviews)
 							{
 								var solution = checkModel.ContextExerciseSolution;
@@ -92,7 +93,7 @@
 								var finishPosition = solution.FindPositionByLineAndCharacted(review.FinishLine, review.FinishPosition);
 								<div>
 									<span class="commented-code">@solution.Substring(startPosition, finishPosition - startPosition).TruncateWithEllipsis(30)</span>
-									@review.Comment
+									@Html.Raw(review.Comment.HtmlEncode().RenderSimpleMarkdown())
 								</div>
 							}
 						}
