--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -792,6 +792,22 @@ li.li-success {
 	margin: 10px 0;
 }
 
+.comments .comment__text {
+	max-width: 790px;
+}
+
+@media (max-width: 992px) {
+	.comments .comment__text {
+		max-width: 530px;
+	}
+}
+
+@media (max-width: 630px) {
+	.comments .comment__text {
+		max-width: 270px;
+	}
+}
+
 .comments .reply-form [name=commentText] {
 	height: 24px;
 	margin-left: 7px;
