Remove progress from unit statistics on mobile layout Show last version after clicking on Try again button on exercise page Add information about social accounts for JoinGroup Add link to user's profile page and to email on Comment and UnitStatitstics pages

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1658,6 +1658,14 @@ h1 .copy-group-link {
 	}
 }
 
+@media (max-width: 600px) {
+	.analytics__dashboard .small-table__title__cell,
+	.analytics__dashboard .small-table__right-cell
+	{
+		width: 35px;
+	}
+}
+
 .analytics__dashboard .large-number {
 	text-align: center;
 	font-size: 40pt;
