--- a/src/uLearn.Web/Views/Account/JoinGroup.cshtml
+++ b/src/uLearn.Web/Views/Account/JoinGroup.cshtml
@@ -16,7 +16,7 @@
 			Вступив, вы сможете смотреть ведомость всей группы прямо на&nbsp;сайте.
 		</p>
 		<p class="help-block">
-			Преподаватели группы увидят вашу электронную почту.
+			Чтобы преподаватели могли связаться с&nbsp;вами в&nbsp;случае необходимости, мы покажем им вашу электронную почту и привязанные аккаунты социальных сетей.
 		</p>
 		<button class="btn btn-success btn-large">Присоединиться</button>
 	</form>
